--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "next": "15.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
