--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "github:tailwindcss/typography",
     "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
