--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@vercel/analytics": "^1.6.1",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
-    "next": "15.5.8",
+    "next": "^15.5.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1"
